--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
