basic functional contact form

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VUE_APP_EMAIL_SERVICE_ID=example
 VUE_APP_EMAIL_TEMPLATE_ID=example
 VUE_APP_EMAIL_USER_ID=example
+VUE_APP_EMAIL_CAPTCHA_SITE_KEY=example
